--- a/.github/workflows/markdown-linter.yml
+++ b/.github/workflows/markdown-linter.yml
@@ -2,36 +2,16 @@ name: markdown-linter
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - "**.md"
-      - .github/workflows/markdown.yml
-      - .markdownlint.yml
+    paths: "**/*.md"
 
 jobs:
-  markdown_lint:
+  linting:
+    name: "Markdown linting"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: Markdown Lint
-        uses: ruzickap/action-my-markdown-linter@v1
+        name: Check out the code
+      - name: Lint Code Base
+        uses: docker://avtodev/markdown-lint:v1
         with:
-          exclude: |
-            CHANGELOG.md
-      - name: Markdown Lint using pre-built container
-        uses: docker://peru/my-markdown-linter
-        with:
-          exclude: |
-            CHANGELOG.md
-  markdown-link-check:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Link Checker
-        uses: ruzickap/action-my-markdown-link-checker@v1
-        with:
-          exclude: |
-            CHANGELOG.md
+          args: "**/*.md"
