--- a/.github/workflows/markdown-linter.yml
+++ b/.github/workflows/markdown-linter.yml
@@ -9,9 +9,12 @@ jobs:
     name: "Markdown linting"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        name: Check out the code
-      - name: Lint Code Base
-        uses: docker://avtodev/markdown-lint:v1
-        with:
+      - name: Check out the code
+        uses: actions/checkout@v2
+
+      - name: Lint changelog file
+        uses: avto-dev/markdown-lint@v1
+          with:
+          rules: "./.markdownlintrc"
           args: "**/*.md"
+          ignore: "./CHANGELOG.md"
