--- a/.github/workflows/markdown-linter.yml
+++ b/.github/workflows/markdown-linter.yml
@@ -1,20 +1,16 @@
 name: markdown-linter
 
-on:
-  push:
-    paths: "**/*.md"
+on: push
 
 jobs:
-  linting:
-    name: "Markdown linting"
+  Lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      - name: Lint changelog file
-        uses: avto-dev/markdown-lint@v1
-          with:
-          rules: "./.markdownlintrc"
-          args: "**/*.md"
-          ignore: "./CHANGELOG.md"
+    - name: Markdown Lint
+      uses: avto-dev/markdown-lint@v1
+        with:
+        rules: "./.markdownlintrc"
+        args: "**/*.md"
+        ignore: "./CHANGELOG.md"
