--- a/.github/workflows/markdown-linter.yml
+++ b/.github/workflows/markdown-linter.yml
@@ -3,13 +3,14 @@ name: markdown-linter
 on: push
 
 jobs:
-  Lint:
+  Markdown Linter:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+
       - name: Markdown Lint
         uses: avto-dev/markdown-lint@v1
         with:
-          rules: "./.markdownlintrc"
+          config: "./.markdownlintrc"
           args: "**/*.md"
           ignore: "./CHANGELOG.md"
