As the day come up she made a stop

--- a/.github/workflows/markdown-linter.yml
+++ b/.github/workflows/markdown-linter.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           config: "./.markdownlintrc"
           args: "**/*.md"
-          ignore: "./CHANGELOG.md"
+          ignore: ["./CHANGELOG.md", "./unorganized_documents/", "./files/"]
