How, how can it be

--- a/.github/workflows/markdown-linter.yml
+++ b/.github/workflows/markdown-linter.yml
@@ -12,5 +12,5 @@ jobs:
         uses: avto-dev/markdown-lint@v1
         with:
           config: "./.markdownlintrc"
-          args: "**/*.md"
+          args: "./README.md ./specifics/*.md"
           ignore: "./CHANGELOG.md ./unorganized_documents/* ./files/*"
