--- a/.gitmodules
+++ b/.gitmodules
@@ -1,51 +1,45 @@
-[submodule "specifics/LearningSQL"]
-	path = specifics/LearningSQL
-	url = git@github.com:LucasBarretto86/LearningSQL.git
-[submodule "specifics/LearningPython"]
-	path = specifics/LearningPython
-	url = git@github.com:LucasBarretto86/LearningPython.git
-[submodule "specifics/LearningMarkdown"]
-	path = specifics/LearningMarkdown
-	url = git@github.com:LucasBarretto86/LearningMarkdown.git
-[submodule "specifics/LearningLOVE"]
-	path = specifics/LearningLOVE
-	url = git@github.com:LucasBarretto86/LearningLOVE.git
-[submodule "specifics/LearningRubyOnRails"]
-	path = specifics/LearningRubyOnRails
-	url = git@github.com:LucasBarretto86/LearningRubyOnRails.git
-[submodule "specifics/LearningJS"]
-	path = specifics/LearningJS
-	url = git@github.com:LucasBarretto86/LearningJS.git
-[submodule "specifics/LearningCSS"]
-	path = specifics/LearningCSS
-	url = git@github.com:LucasBarretto86/LearningCSS.git
-[submodule "specifics/LearningHTML"]
-	path = specifics/LearningHTML
-	url = git@github.com:LucasBarretto86/LearningHTML.git
-[submodule "specifics/LearningCPP"]
-	path = specifics/LearningCPP
-	url = git@github.com:LucasBarretto86/LearningCPP.git
 [submodule "specifics/LearningAssembly"]
 	path = specifics/LearningAssembly
 	url = git@github.com:LucasBarretto86/LearningAssembly.git
-[submodule "specifics/LearningMermaid"]
-	path = specifics/LearningMermaid
-	url = git@github.com:LucasBarretto86/LearningMermaid.git
-[submodule "specifics/LearningLinux"]
-	path = specifics/LearningLinux
-	url = git@github.com:LucasBarretto86/LearningLinux.git
+[submodule "specifics/LearningCPP"]
+	path = specifics/LearningCPP
+	url = git@github.com:LucasBarretto86/LearningCPP.git
+[submodule "specifics/LearningCSS"]
+	path = specifics/LearningCSS
+	url = git@github.com:LucasBarretto86/LearningCSS.git
 [submodule "specifics/LearningDocker"]
 	path = specifics/LearningDocker
 	url = git@github.com:LucasBarretto86/LearningDocker.git
+[submodule "specifics/LearningHTML"]
+	path = specifics/LearningHTML
+	url = git@github.com:LucasBarretto86/LearningHTML.git
 [submodule "specifics/LearningJava"]
 	path = specifics/LearningJava
 	url = git@github.com:LucasBarretto86/LearningJava.git
+[submodule "specifics/LearningJS"]
+	path = specifics/LearningJS
+	url = git@github.com:LucasBarretto86/LearningJS.git
+[submodule "specifics/LearningLinux"]
+	path = specifics/LearningLinux
+	url = git@github.com:LucasBarretto86/LearningLinux.git
+[submodule "specifics/LearningLua"]
+	path = specifics/LearningLua
+	url = git@github.com:LucasBarretto86/LearningLua.git
+[submodule "specifics/LearningMarkdown"]
+	path = specifics/LearningMarkdown
+	url = git@github.com:LucasBarretto86/LearningMarkdown.git
+[submodule "specifics/LearningMermaid"]
+	path = specifics/LearningMermaid
+	url = git@github.com:LucasBarretto86/LearningMermaid.git
 [submodule "specifics/LearningNGINX"]
 	path = specifics/LearningNGINX
 	url = git@github.com:LucasBarretto86/LearningNGINX.git
-[submodule "specifics/LearningHanami"]
-	path = specifics/LearningHanami
-	url = git@github.com:LucasBarretto86/LearningHanami.git
+[submodule "specifics/LearningPython"]
+	path = specifics/LearningPython
+	url = git@github.com:LucasBarretto86/LearningPython.git
 [submodule "specifics/LearningRuby"]
 	path = specifics/LearningRuby
 	url = git@github.com:LucasBarretto86/LearningRuby.git
+[submodule "specifics/LearningSQL"]
+	path = specifics/LearningSQL
+	url = git@github.com:LucasBarretto86/LearningSQL.git
